--- a/kiva.html
+++ b/kiva.html
@@ -21,7 +21,7 @@ figures:
 
   <div class="container">
 
-    <p>PayPal has been supporting Kiva by providing free transactions on their network for the past ten years. They decided to celebrate the anniversary of their partnership with <a href="https://www.kiva.org/paypal">10 Days of Lending</a>, encouraging PayPal employees to make charitable loans on Kiva.</p>
+    <p>PayPal has been supporting Kiva by providing free transactions on their network for the past ten years. They decided to celebrate the anniversary of their partnership with <a href="https://partnerships.kiva.org/how-paypal-showed-customers-the-big-impact-of-small-loans/">10 Days of Lending</a>, encouraging PayPal employees to make charitable loans on Kiva.</p>
 
     <p>During the project I worked closely with our designer, Josh to create a responsive microsite with CSS animations, to give PayPal employees all of the details about the partnership, and to help them get started on Kiva.</p>
 
