Update availability for 2020

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ projects:
       </ul>
 
     </section>
-    <p class="credit">I’m available for projects in the <span class="phrase">summer <span class="ampersand">&amp;</span> fall of 2020.</span></p>
+    <p class="credit">I’m available for projects in the <span class="phrase">fall <span class="ampersand">&amp;</span> winter of 2020.</span></p>
   </div>
 
   <div class="container icons">
