Feature two more case studies

--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@ projects:
   company: The Goldhirsh Foundation
   url: /la2050
   image: /images/la2050/2048-wide/poster.jpg
-# - name: GOOD Fest
-#   company: Google &amp; GOOD Worldwide
-#   url: /good-fest
-#   image: /images/good-fest/2048-wide/poster-b.jpg
-#   image_style: "background-position: bottom;"
+- name: GOOD Fest
+  company: Google &amp; GOOD Worldwide
+  url: /good-fest
+  image: /images/good-fest/2048-wide/poster-b.jpg
+  image_style: "background-position: bottom;"
 - name: 4th of July <span class="phrase">at Grand Park</span>
   company: The Music Center
   url: /grand-park
   image: /images/grand-park/2048-wide/poster-a.jpg
-# - name: 10 Days of Lending
-#   company: PayPal, Kiva, &amp; GOOD Worldwide
-#   url: /kiva
-#   image: /images/kiva/2048-wide/poster-c.jpg
+- name: 10 Days of Lending
+  company: PayPal, Kiva, &amp; GOOD Worldwide
+  url: /kiva
+  image: /images/kiva/2048-wide/poster-c.jpg
 # - name: GOOD Worldwide
 #   company: Type/Code
 #   url: /good
