--- a/index.html
+++ b/index.html
@@ -3,31 +3,35 @@ layout: default
 title: Code & Style for the Web, by Jim Thoburn
 class: home
 projects:
+- name: Thank You Machine
+  company: Zendesk &amp; One Darnley Raod
+  url: /thank-you-machine
+  image: /images/thank-you-machine/2048-wide/poster-b.png
+# - name: 4th of July <span class="phrase">at Grand Park</span>
+#   company: The Music Center
+#   url: /grand-park
+#   image: /images/grand-park/2048-wide/poster-a.jpg
 - name: My LA2050 Challenge
   company: The Goldhirsh Foundation
   url: /la2050
   image: /images/la2050/2048-wide/poster.jpg
-- name: GOOD Fest
-  company: Google &amp; GOOD Worldwide
-  url: /good-fest
-  image: /images/good-fest/2048-wide/poster-b.jpg
-  image_style: "background-position: bottom;"
-- name: 4th of July <span class="phrase">at Grand Park</span>
-  company: The Music Center
-  url: /grand-park
-  image: /images/grand-park/2048-wide/poster-a.jpg
-- name: 10 Days of Lending
-  company: PayPal, Kiva, &amp; GOOD Worldwide
-  url: /kiva
-  image: /images/kiva/2048-wide/poster-c.jpg
+# - name: GOOD Fest
+#   company: Google &amp; GOOD Worldwide
+#   url: /good-fest
+#   image: /images/good-fest/2048-wide/poster-b.jpg
+#   image_style: "background-position: bottom;"
+# - name: 10 Days of Lending
+#   company: PayPal, Kiva, &amp; GOOD Worldwide
+#   url: /kiva
+#   image: /images/kiva/2048-wide/poster-c.jpg
 # - name: GOOD Worldwide
 #   company: Type/Code
 #   url: /good
 #   image: /images/good/2048-wide/poster.jpg
-- name: Food Oasis <span class="phrase">Los Angeles</span>
-  company: <span class="phrase">Code for America</span>
-  url: /food-oasis
-  image: /images/food-oasis/2048-wide/poster-a.jpg
+# - name: Food Oasis <span class="phrase">Los Angeles</span>
+#   company: <span class="phrase">Code for America</span>
+#   url: /food-oasis
+#   image: /images/food-oasis/2048-wide/poster-a.jpg
 # - name: CTZN App
 #   company: GOOD Worldwide
 #   url: /ctzn-app
