Update case study for Thank You Machine

--- a/thank-you-machine.html
+++ b/thank-you-machine.html
@@ -27,12 +27,12 @@ figures:
 
   <div class="container">
 
-    <p>Thank You Machine is a web app that you can use to send an illustrated card to
+    <p>Thank You Machine is a web app that visitors can use to make an illustrated card for
       a colleague, friend or family member.</p>
 
-    <p>I teamed up with John &amp; Sam to create a user interface for site, integrate it with a CMS, and deploy it to a scalable web hosting service. We used <a href="https://www.netlify.com/products/functions/">Netlify functions</a> to generate a downloadable image for each card. And we used stacks of SVG images for the card illustrations, so a visitor can make their card more unique.</p>
+    <p>Our technical lead, John, and I teamed up to create a user interface for app, integrate it with a CMS, and set it up with scalable hosting. The illustrations were implemented with SVG images that a visitor can mix &amp; match to make their card more unique. And we used <a href="https://www.netlify.com/products/functions/">Netlify functions</a> to generate a downloadable image for each card. </p>
 
-    <p>The project was completed in a short time frame, going from prototype to launch in a few weeks. Work continued after the first version was released, including a holiday edition and translations into Spanish, Portuguese, French, German, Dutch, Japanese and Korean.</p>
+    <p>The project was completed in a short time frame, going from prototype to launch in weeks. Work continued after the first version was released, including a holiday edition and translations into Spanish, Portuguese, French, German, Dutch, Japanese and Korean.</p>
 
     <p>You can <a href="https://www.zendesk.com/blog/empathy-chaotic-world-new-way-say-thanks/">read more about the project</a> on the Zendesk web site.</p>
 
@@ -77,9 +77,12 @@ figures:
     </div>
 
     <div>
-      <h3>Templates &amp; Content</h3>
+      <h3>Workflow</h3>
       <ul>
-        <li><a href="https://craftcms.com/">Craft CMS</a></li>
+        <li><a href="https://www.ddev.com/">Ddev</a></li>
+        <li><a href="https://nodejs.org">Node.js</a></li>
+        <li><a href="https://github.com">GitHub</a></li>
+        <li><a href="https://www.docker.com/">Docker</a></li>
       </ul>
     </div>
 
@@ -92,12 +95,9 @@ figures:
     </div>
 
     <div>
-      <h3>Workflow</h3>
+      <h3>Templates &amp; Content</h3>
       <ul>
-        <li><a href="https://www.ddev.com/">Ddev</a></li>
-        <li><a href="https://nodejs.org">Node.js</a></li>
-        <li><a href="https://github.com">GitHub</a></li>
-        <li><a href="https://www.docker.com/">Docker</a></li>
+        <li><a href="https://craftcms.com/">Craft CMS</a></li>
       </ul>
     </div>
 
