--- a/thank-you-machine.html
+++ b/thank-you-machine.html
@@ -30,7 +30,7 @@ figures:
     <p>Thank You Machine is a web app that visitors can use to make an illustrated card for
       a colleague, friend or family member.</p>
 
-    <p>Our technical lead, John, and I teamed up to create a user interface for app, integrate it with a CMS, and set it up with scalable hosting. The illustrations were implemented with SVG images that a visitor can mix &amp; match to make their card more unique. And we used <a href="https://www.netlify.com/products/functions/">Netlify functions</a> to generate a downloadable image for each card. </p>
+    <p>Our engineering lead, John, and I teamed up to create a user interface for the app, integrate it with a CMS, and set it up with scalable hosting. The illustrations were implemented with SVG images that a visitor can mix &amp; match to make their card more unique. And we used <a href="https://www.netlify.com/products/functions/">Netlify functions</a> to generate a downloadable image for each card. </p>
 
     <p>The project was completed in a short time frame, going from prototype to launch in weeks. Work continued after the first version was released, including a holiday edition and translations into Spanish, Portuguese, French, German, Dutch, Japanese and Korean.</p>
 
