Update LA2050 case study

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ projects:
 #   company: The Music Center
 #   url: /grand-park
 #   image: /images/grand-park/2048-wide/poster-a.jpg
-- name: My LA2050 Challenge
+- name: LA2050
   company: The Goldhirsh Foundation
   url: /la2050
   image: /images/la2050/2048-wide/poster.jpg
