--- a/la2050.html
+++ b/la2050.html
@@ -1,14 +1,14 @@
 ---
 layout: default
-title: My LA2050 Challenge
+title: LA2050
 figures:
-- caption: My LA2050 Challenge
+- caption: LA2050 Challenge
   url: https://activation.la2050.org
 - caption: "Welcome, Neighbor: Making LA the most welcoming place in America"
   url: https://activation.la2050.org/connect/mirys-list/
 - caption: Timeline
   url: https://activation.la2050.org/timeline/
-- caption: My LA2050 Challenge
+- caption: LA2050 Challenge
   url: https://activation.la2050.org
 - caption: Vote
   url: https://beta-challenge.la2050.org/vote/form/
@@ -20,16 +20,16 @@ figures:
 
   <div class="project-header" style="background-image: url(/images/la2050/2048-wide/poster.jpg);">
     <div class="project-header__container">
-      <h1 class="project-header__title">My LA2050 <span class="phrase">Challenge</span></h1>
+      <h1 class="project-header__title">LA2050</h1>
       <p class="project-header__company">with the team at <a href="http://goldhirshfoundation.org">The Goldhirsh Foundation</a></p>
     </div>
   </div>
 
   <div class="container">
 
-    <p>The My LA2050 Challenge is a voting contest held each year to support organizations working to improve Los Angeles.</p>
+    <p>The LA2050 Challenge is a voting contest held each year to support organizations working to improve Los Angeles.</p>
 
-    <p>Our designer, Megan, and I partnered up to create a <a href="https://activation.la2050.org">web site</a> that explains the contest, showcases the submitted projects, and allows visitors to vote for <span class="phrase">their favorites.</span></p>
+    <p>Our designer, Megan, and I partnered up to create a <a href="https://challenge.la2050.org">web site</a> that explains the contest, showcases the submitted projects, and allows visitors to vote for <span class="phrase">their favorites.</span></p>
 
     <p>We were expecting potentially thousands of voters at a time, so we built a <a href="https://jekyllrb.com">static web site</a> that can be served with high availability, performance and security. Content management, user submissions <span class="ampersand">&amp;</span> accounts were provided by <a href="#tools">third-party services</a>.</p>
 
@@ -38,7 +38,7 @@ figures:
     <h2>Visit the project</h2>
 
     <ul class="action">
-      <li><a href="https://challenge.la2050.org">My LA2050 Challenge</a></li>
+      <li><a href="https://challenge.la2050.org">LA2050 Challenge</a></li>
       <li><a href="https://github.com/la2050/challenge">GitHub project</a></li>
     </ul>
 
