--- a/thank-you-machine.html
+++ b/thank-you-machine.html
@@ -116,7 +116,7 @@ figures:
       <h2>Next project →</h2>
     </div>
     <div class="project-next__container">
-      <h3 class="project-next__title">My LA2050 Challenge</h3>
+      <h3 class="project-next__title">LA2050</h3>
       <p class="project-next__company">with the team at <span class="phrase">The Goldhirsh Foundation</span></p>
     </div>
   </a>
