Add case study for “Stories about helpful people”

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@ layout: default
 title: Code & Style for the Web, by Jim Thoburn
 class: home
 projects:
+- name: Stories about helpful people
+  company: Zendesk &amp; One Darnley Raod
+  url: /helpers
+  image: /images/helpers/2048-wide/7.png
 - name: Thank You Machine
   company: Zendesk &amp; One Darnley Raod
   url: /thank-you-machine
