Update “next” case study links

--- a/helpers.html
+++ b/helpers.html
@@ -104,12 +104,12 @@ figures:
 
   </div>
 
-  <a href="/la2050" class="project-next" style="background-image: url(/images/la2050/2048-wide/poster.jpg);">
+  <a href="/thank-you-machine" class="project-next" style="background-image: url(/images/thank-you-machine/2048-wide/poster-b.png);">
     <div class="project-next__direction">
       <h2>Next project →</h2>
     </div>
     <div class="project-next__container">
-      <h3 class="project-next__title">LA2050</h3>
-      <p class="project-next__company">with the team at <span class="phrase">The Goldhirsh Foundation</span></p>
+      <h3 class="project-next__title">Thank You Machine</h3>
+      <p class="project-next__company">with the teams at Zendesk and <span class="phrase">One Darnley Road</span></p>
     </div>
   </a>
