--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@ title: Code & Style for the Web, by Jim Thoburn
 class: home
 projects:
 - name: Stories about helpful people
-  company: Zendesk &amp; One Darnley Raod
+  company: Zendesk &amp; One Darnley Road
   url: /helpers
   image: /images/helpers/2048-wide/7.png
 - name: Thank You Machine
-  company: Zendesk &amp; One Darnley Raod
+  company: Zendesk &amp; One Darnley Road
   url: /thank-you-machine
   image: /images/thank-you-machine/2048-wide/poster-b.png
 # - name: 4th of July <span class="phrase">at Grand Park</span>
