--- a/fahrenheit.html
+++ b/fahrenheit.html
@@ -86,12 +86,12 @@ figures:
 
   </div>
 
-  <a href="/thank-you-machine" class="project-next" style="background-image: url(/images/thank-you-machine/2048-wide/poster-b.png);">
+  <a href="/helpers" class="project-next" style="background-image: url(/images/helpers/2048-wide/7.png);">
     <div class="project-next__direction">
       <h2>Next project →</h2>
     </div>
     <div class="project-next__container">
-      <h3 class="project-next__title">Thank You Machine</h3>
+      <h3 class="project-next__title">Stories about helpful people</h3>
       <p class="project-next__company">with the teams at Zendesk and <span class="phrase">One Darnley Road</span></p>
     </div>
   </a>
