Add case study for Apple Music

--- a/grand-park.html
+++ b/grand-park.html
@@ -105,6 +105,6 @@ figures:
     </div>
     <div class="project-next__container">
       <h3 class="project-next__title">10 Days of Lending</h3>
-      <p class="project-next__company">with the teams at Kiva and <span class="phrase">GOOD Worldwide</span></p>
+      <p class="project-next__company">with the teams at PayPal, Kiva and <span class="phrase">GOOD Worldwide</span></p>
     </div>
   </a>
