--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@ projects:
   company: Zendesk &amp; One Darnley Road
   url: /helpers
   image: /images/helpers/2048-wide/7.png
+- name: 500 Albums
+  company: Apple Music &amp; Rolling Stone
+  url: /500-albums
+  image: /images/500-albums/2048-wide/poster.png
 - name: Thank You Machine
   company: Zendesk &amp; One Darnley Road
   url: /thank-you-machine
