--- a/helpers.html
+++ b/helpers.html
@@ -104,12 +104,12 @@ figures:
 
   </div>
 
-  <a href="/thank-you-machine" class="project-next" style="background-image: url(/images/thank-you-machine/2048-wide/poster-b.png);">
+  <a href="/500-albums" class="project-next" style="background-image: url(/images/500-albums/2048-wide/poster.png);">
     <div class="project-next__direction">
       <h2>Next project →</h2>
     </div>
     <div class="project-next__container">
-      <h3 class="project-next__title">Thank You Machine</h3>
-      <p class="project-next__company">with the teams at Zendesk and <span class="phrase">One Darnley Road</span></p>
+      <h3 class="project-next__title">500 Albums</h3>
+      <p class="project-next__company">with the teams at Rolling Stone and <span class="phrase">Penske Media</span>, sponsored by <span class="phrase">Apple Music</span></p>
     </div>
   </a>
