Update example work for home page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ projects:
 - name: Stories about helpful people
   company: Zendesk &amp; One Darnley Road
   url: /helpers
-  image: /images/helpers/2048-wide/7.png
+  image: /images/helpers/2048-wide/4.png
 - name: 500 Albums
   company: Apple Music &amp; Rolling Stone
   url: /500-albums
@@ -19,10 +19,10 @@ projects:
 #   company: The Music Center
 #   url: /grand-park
 #   image: /images/grand-park/2048-wide/poster-a.jpg
-- name: LA2050
-  company: The Goldhirsh Foundation
-  url: /la2050
-  image: /images/la2050/2048-wide/poster.jpg
+# - name: LA2050
+#   company: The Goldhirsh Foundation
+#   url: /la2050
+#   image: /images/la2050/2048-wide/poster.jpg
 # - name: GOOD Fest
 #   company: Google &amp; GOOD Worldwide
 #   url: /good-fest
@@ -117,12 +117,12 @@ projects:
       <li>
         <img src="/images/icons/nounproject/lastspark/wheel.svg" width="100" height="100" alt="" />
         <h2>User interfaces</h2>
-        <p>Fast, robust, production-ready HTML, CSS <span class="ampersand">&amp;</span> JavaScript–responsive and accessible to anyone in your audience–built with care and industry best practices. <a href="https://activation.la2050.org/" aria-label="example user interface">See an example</a></p>
+        <p>Fast, robust, production-ready HTML, CSS <span class="ampersand">&amp;</span> JavaScript–responsive and accessible to anyone in your audience–built with care and industry best practices. <a href="https://helpers.zendesk.com/" aria-label="example user interface">See an example</a></p>
       </li>
       <li>
         <img src="/images/icons/nounproject/lastspark/treasure.svg" width="100" height="100" alt="" />
         <h2>Pattern libraries</h2>
-        <p>Documented, reusable elements of code <span class="ampersand">&amp;</span> style that will help you maintain and improve your product over time. <a href="https://jimthoburn.github.io/goodinc-ui/build/" aria-label="example pattern library">See an example</a></p>
+        <p>Documented, reusable elements of code <span class="ampersand">&amp;</span> style that will help you maintain and improve your product over time. <a href="https://fathomnet-ui.tobbi.co/styles/type/" aria-label="example pattern library">See an example</a></p>
       </li>
       <li>
         <img src="/images/icons/nounproject/lastspark/ship-forward.svg" width="100" height="100" alt="" />
