--- a/food-oasis.html
+++ b/food-oasis.html
@@ -3,13 +3,13 @@ layout: default
 title: Food Oasis Los Angeles
 figures:
 - caption: Food Oasis Los Angeles
-  url: https://foodoasis.la
+  url: https://web.archive.org/web/20190111024953/https://foodoasis.la/
 - caption: Map of healthy food locations
-  url: https://foodoasis.la/locations
+  url: https://web.archive.org/web/20190111024953/https://foodoasis.la/locations
 - caption: Organizations featured on Food Oasis
-  url: https://foodoasis.la/organizations/
+  url: https://web.archive.org/web/20190111024953/https://foodoasis.la/organizations/
 - caption: Food Oasis sponsors
-  url: https://foodoasis.la/#navigation
+  url: https://web.archive.org/web/20190111024953/https://foodoasis.la/#navigation
 ---
 
 {% include ahoy.html %}
@@ -37,7 +37,7 @@ figures:
     <h2>Visit the project</h2>
 
     <ul class="action">
-      <li><a href="https://foodoasis.la">Food Oasis Los Angeles</a></li>
+      <li><a href="https://web.archive.org/web/20190111024953/https://foodoasis.la/">Food Oasis Los Angeles</a></li>
       <li><a href="https://github.com/hackforla/food-oasis-la">GitHub project</a></li>
     </ul>
 
