Update case studies

--- a/500-albums.html
+++ b/500-albums.html
@@ -30,6 +30,7 @@ figures:
 
     <ul class="action">
       <li><a href="https://www.rollingstone.com/music/music-lists/best-albums-of-all-time-1062063/">The 500 greatest albums of all time</a></li>
+      <!-- <li><a href="https://xstate.js.org/viz/?gist=5f70218520f8ec60a69cb10b1611ab1d">State diagram</a></li> -->
     </ul>
 
     {% include figures.html %}
