--- a/food-oasis.html
+++ b/food-oasis.html
@@ -3,13 +3,13 @@ layout: default
 title: Food Oasis Los Angeles
 figures:
 - caption: Food Oasis Los Angeles
-  url: https://web.archive.org/web/20190111024953/https://foodoasis.la/
+  url: https://foodoasis.digitalservice.la/
 - caption: Map of healthy food locations
-  url: https://web.archive.org/web/20190111024953/https://foodoasis.la/locations
+  url: https://foodoasis.digitalservice.la/locations
 - caption: Organizations featured on Food Oasis
-  url: https://web.archive.org/web/20190111024953/https://foodoasis.la/organizations/
+  url: https://foodoasis.digitalservice.la/organizations/
 - caption: Food Oasis sponsors
-  url: https://web.archive.org/web/20190111024953/https://foodoasis.la/#navigation
+  url: https://foodoasis.digitalservice.la/#navigation
 ---
 
 {% include ahoy.html %}
@@ -30,14 +30,14 @@ figures:
 
     <p>Within a few weeks of starting the project, we published a working map of healthy food locations. The team steadily improved it over the next year, updating the design, and adding new features—like searching by location and filtering by open hours.</p>
 
-    <p>I was involved by writing code for the user interface, maintaining the <a href="https://pages.github.com">static web site</a>, and providing support for our weekly volunteers—writing <a href="https://github.com/hackforla/food-oasis-la/issues">issues</a> for beginners, documenting the code, making improvements to the development environment, pair programming, responding to questions, and reviewing pull requests.</p>
+    <p>I was involved by writing code for the user interface, maintaining the <a href="https://pages.github.com">static web site</a>, and providing support for our weekly volunteers—writing issues for beginners, documenting the code, making improvements to the development environment, pair programming, responding to questions, and reviewing pull requests.</p>
 
     <p>My role also involved importing and managing data with Node.js, setting up hosting and content management with <a href="https://jekyllrb.com">Jekyll</a> and GitHub Pages, and configuring domains, redirects, and caching with Cloudflare.</p>
 
     <h2>Visit the project</h2>
 
     <ul class="action">
-      <li><a href="https://web.archive.org/web/20190111024953/https://foodoasis.la/">Food Oasis Los Angeles</a></li>
+      <li><a href="https://search.foodoasis.la">Food Oasis Los Angeles</a></li>
       <li><a href="https://github.com/hackforla/food-oasis-la">GitHub project</a></li>
     </ul>
 
