--- a/helpers.html
+++ b/helpers.html
@@ -35,14 +35,15 @@ figures:
 
     <p>Our engineering lead, John, and I teamed up to create a user interface for the site, integrate it with a CMS, and set it up with scalable hosting. We used gestures and other user interactions to control animations &amp; transitions throughout the site.</p>
 
-    <p>The project was completed in a short time frame, going from prototype to launch in weeks. The first release included a short film documentary and two articles.</p>
+    <p>The project was completed in a short time frame, going from prototype to launch in weeks.</p>
 
-    <p>You can <a href="https://www.zendesk.com/blog/stories-about-helpful-people/">read more about the project</a> on the Zendesk web site.</p>
+    <p>One of the short film documentaries has been featured by <a href="https://vimeo.com/blog/post/golden-age-karate-by-sindha-agha-zendesk/">Vimeo’s staff picks</a>. You can <a href="https://www.zendesk.com/blog/stories-about-helpful-people/">read more about the project</a> on the Zendesk web site.</p>
 
     <h2>Visit the project</h2>
 
     <ul class="action">
       <li><a href="https://helpers.zendesk.com/">Stories about helpful people</a></li>
+      <!-- <li><a href="https://helpers.zendesk.com/eric">Documentary film</a></li> -->
     </ul>
 
     {% include figures.html %}
