Update example design prototype

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ projects:
       <li>
         <img src="/images/icons/nounproject/lastspark/bottle.svg" width="100" height="100" alt="" />
         <h2>Prototypes</h2>
-        <p>Interactive designs and sketches that can be created quickly, to validate your idea and find opportunities for improvement–before engineering work is invested. <a href="https://fathomnet-ui.tobbi.co/pages/annotations/" aria-label="example prototype">See an example</a></p>
+        <p>Interactive designs and sketches that can be created quickly, to validate your idea and find opportunities for improvement–before engineering work is invested. <a href="https://jimthoburn.github.io/goodinc-ui/design/" aria-label="example prototype">See an example</a></p>
       </li>
       <li>
         <img src="/images/icons/nounproject/lastspark/wheel.svg" width="100" height="100" alt="" />
