--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ projects:
       </ul>
 
     </section>
-    <p class="credit">I’m available for projects in the <span class="phrase">winter <span class="ampersand">&amp;</span> spring of 2021.</span></p>
+    <p class="credit">I’m available for projects in the <span class="phrase">spring <span class="ampersand">&amp;</span> summer of 2021.</span></p>
   </div>
 
   <div class="container icons">
