Update case studies

--- a/la2050.html
+++ b/la2050.html
@@ -33,7 +33,7 @@ figures:
 
     <p>We were expecting potentially thousands of voters at a time, so we built a <a href="https://jekyllrb.com">static web site</a> that can be served with high availability, performance and security. Content management, user submissions <span class="ampersand">&amp;</span> accounts were provided by <a href="#tools">third-party services</a>.</p>
 
-    <p><a href="http://thewebahead.net/54">Young Hahn</a> and Dave Cole’s work for <a href="https://developmentseed.org/blog/new-healthcare-gov-is-open-and-cms-free/">healthcare.gov</a> was a big inspiration to us.</p>
+    <p><a href="http://thewebahead.net/54">Young Hahn</a> and Dave Cole’s work for <a href="https://www.developmentseed.org/projects/healthcare-gov">healthcare.gov</a> was a big inspiration to us.</p>
 
     <h2>Visit the project</h2>
 
